Bug 75996 - Crash, when undoing steps in attachment from bug #48582
Summary: Crash, when undoing steps in attachment from bug #48582
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.5.3 release
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.5.0 target:4.4.1
Keywords: haveBacktrace
: 68046 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-03-10 18:56 UTC by Thomas Hackert
Modified: 2015-01-30 11:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB crash log (8.10 KB, text/plain)
2014-03-10 18:58 UTC, Thomas Hackert
Details
typescript includes backtrace with symbols (11.69 KB, text/plain)
2014-03-11 11:39 UTC, Terrence Enger
Details
Apple stack trace (93.99 KB, text/plain)
2014-10-20 08:02 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Hackert 2014-03-10 18:56:29 UTC
Hello @ll,
I hope, I have chosen the right compononent and severity and the like. If not, feel free to change it adequately ... ;)

I stumbled upon the following, while I tried to confirm bug #48532 ...

When you download and open the attached document (https://bugs.freedesktop.org/attachment.cgi?id=59830), open it, confirm the first dialog without changing anything (and also confirm the warning afterwards), LO crashes, if you press <Ctrl>+<Z> ... :(

Steps to reproduce:

1. Download https://bugs.freedesktop.org/attachment.cgi?id=59830
2. Open the file (06_minutes.ott) in Writer
3. You will get the message "Minutes types". Just press "OK"
4. Press also "OK" on "Bookmark NextTopic is not defined!"
5. Press <Ctrl>+<Z>

On my system, LO immediately crashes ... :(

Discovered with:
LO: Version: 4.2.2.1 Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f (but also with Version: 4.1.5.3 Build-ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24 – both with installed Germanophone lang- as well as helppack)
OS: Debian Testing i386

Sorry for the inconvenience and have a nice evening
Thomas.
Comment 1 Thomas Hackert 2014-03-10 18:58:50 UTC
Created attachment 95528 [details]
GDB crash log

I tried to use GDB to get a backtrace from this crash, but did not find the instruction on the wiki ... :( Hopefully, it is still helpfull ... ;)
Comment 2 Terrence Enger 2014-03-11 11:34:41 UTC
Bug 48532 is against product xorg, and it has a different attachment.
Did you mean a different bug?

BTW, I see nothing for you to apologize for.

Terry.
Comment 3 Terrence Enger 2014-03-11 11:39:44 UTC
Created attachment 95594 [details]
typescript includes backtrace with symbols
Comment 4 Terrence Enger 2014-03-11 12:26:24 UTC
Further to the backtrace in comment 3...

My LibreOffice is master commit 806f4d8, fetched 2014-03-04, configured:
    --enable-option-checking=fatal
    --enable-dbgutil
    --enable-crashdump
    --without-system-postgresql
    --without-myspell-dicts
    --with-extra-buildid
    --without-doxygen
    --with-external-tar=/home/terry/lo_hacking/git/src
built and running on debian-wheezy 64-bit.
Comment 5 Thomas Hackert 2014-03-11 12:38:09 UTC
Hello Terrence, *,
why #48532? I meant https://bugs.freedesktop.org/show_bug.cgi?id=48582, which is the number, what I have mentioned in the summary ... ;)

Anyway, thanks for confirming
Thomas.
Comment 6 Terrence Enger 2014-03-11 18:39:56 UTC
Just for the benefit of bz search, top frame in the stack is
   SwNodeIndex::operator=(SwNodeIndex const&) () from
   /natty_big/downloads_libreoffice64/LibreOffice_4.2.2.1_Linux_x86-64_deb/DEBS/install/opt/libreoffice4.2/program/../program/libswlo.so

Note that four functions:
    SwHistoryBookmark::SetInDoc
    SwHistory::Rollback
    SwUndoDelete::UndoImpl
    SfxUndoManager::UndoWithContext
also appear in the backtrace of bug 68046 "Crash related to
undo/redo".
Comment 7 Alex Thurgood 2014-10-20 08:02:13 UTC
Created attachment 108087 [details]
Apple stack trace
Comment 8 Alex Thurgood 2014-10-20 08:02:57 UTC
Confirming that bug still present in master 440 alpha, stack trace enclosed
Comment 9 Michael Stahl 2015-01-29 13:51:32 UTC
*** Bug 68046 has been marked as a duplicate of this bug. ***
Comment 10 Michael Stahl 2015-01-29 20:54:55 UTC
fixed on master
Comment 11 Michael Stahl 2015-01-29 21:28:52 UTC
the bots are lazy today, commit is 370febbf19a5f362394d1c9e69b12dcb218f6501
Comment 12 Commit Notification 2015-01-30 11:37:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=28bfba7405b35741a73066386ddb6fc017b32233&h=libreoffice-4-4

tdf#75996: sw: correct bookmark positions when deleting text

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.